--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,8 +29,18 @@
   </div>
     
     <div class="container">
-    <h1 style="color: red; font-size: 4rem; text-align: center; margin-top: 30px;">
+    <h1 style="color: rgb(212, 17, 17); font-size: 4rem; text-align: center; margin-top: 30px;">
         🚀 MILESTONE 2 🚀
+    </h1>
+
+    <div class="container">
+    <h1 style="color: rgb(9, 53, 110); font-size: 4rem; text-align: center; margin-top: 30px;">
+        🚀 MILESTONE 2 🚀
+    </h1>
+
+    <div class="container">
+    <h1 style="color: rgb(0, 225, 255); font-size: 4rem; text-align: center; margin-top: 30px;">
+        🚀 MILESTONE 4 🚀
     </h1>
 
     <h1>Image Upload </h1>
